css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

*,
*::before,
*::after {
    box-sizing: inherit;
    margin:0;
    padding:0;
 }

html,body {
    box-sizing: border-box;
    scroll-behavior: smooth;
    }

body{
    background:#222831;
    color:#e5e5e5;
    font-family: 'Roboto', serif;
    position:relative;
    overflow-x:hidden;
}
a{
text-decoration:none;
color:#efb1ff;
}

li{
    list-style: none;
}
header{
   /* border:2px solid white; */
   display:flex;
   justify-content:space-between;
   margin:1em .4em 0em;
   position:sticky;
   height:4em;
   top:0;
   z-index:100;
   background:#222831;
   opacity:1;
   text-align:center;
   align-items:center;
  
   
}

.logo{
    width:40px;
    height:40px;
    position:absolute;
    text-transform:uppercase;
    background:#efb1ff;
    /* border-color:#efb1ff 2px solid; */
    clip-path: polygon(48% 0, 91% 24%, 92% 76%, 50% 100%, 8% 76%, 7% 25%);
    position:relative;
   margin-left:2em;
   margin-top:.4em;
}
.logo > span{
    position:absolute;
    z-index:10;
    color:#222831;
    top:.7em;
    left:.95em;
    font-weight:bold;
}
.menus{
    display:flex;
    justify-content:flex-end;
    margin-right:2.1em;
 
}
header svg{
display:none;
}
.sub-menu{
display:flex;
margin-top:.4em;
animation:lay-down 500ms ease-in;
/* background:red; */
}
 
.sub-menu li a{
    color:white;
    /* font-weight:bold; */
    margin:0 .8em;
    font-size:.89em;
    opacity:.78;
    background:#222831;
    padding:.6em .3em .4em;
}
.sub-menu li a:hover{
    color:#efb1ff;
}
.sub-menu li a span{
    color:#efb1ff;
    opacity:1;
    margin-right:.6em;
}
.menus > a{
    margin:0 .7em;
    /* margin-left:0em; */
    border:1px solid #efb1ff;
    padding:.3em .4em;
    font-size:1.1em;
    height:1.99em;
}

main{
    width:700px;
    padding:.7em;
    padding-left:.5em;
    margin-left:140px;
    margin-top:100px;
    font-size:1.8em;
    height:500px;
   
}
.lay-down__animation{
    animation:lay-down 500ms ease-in backwards;
}

.lay-down__animation:nth-child(2){
    animation-delay:.12s;
 }
 .lay-down__animation:nth-child(3){
    animation-delay:.16s;
 }
 .lay-down__animation:nth-child(4){
  animation-delay:.25s;
 
 }
 .lay-down__animation:nth-child(5){
   animation-delay:.28s;
 }
 
main >h3{
    font-size:.5em;
    color:#efb1ff;
    font-weight:bold;
    margin-bottom:.5em;
}
main :nth-child(3){
opacity:.7;
width:700px;
}
main > p{
    margin-bottom:2.2em;
    margin-top:1.6em;
    font-size:.6em;
    line-height:1.4em;
    opacity:.8;
}
main >a {
    border: 2px #efb1ff solid;
    padding:.5em;
    font-size:.7em;
    border-radius:.3em;
    
}
.social-icons{
    position:absolute;
}
.social-icons li a svg{
   fill:#efb1ff;
   width:28px;
   height:28px;
   margin-left:25px;
   padding:.3em 0;
   margin-bottom:1.1em;
}
.side-email{
  
    margin-top:230px;
    transform:rotate(90deg);
    position:fixed;
    right:-.6em;
    font-size:1em;
}
.social-icons  ul{
    position:fixed;
    top:13em;
    left:1.2em;
    opacity:.7;
    font-weight:bold;
}

.about{
    height:380px; 
    display:flex;
    justify-content: space-between;
    margin-left:8.5em;
    padding:1em;
    padding-top:6em;
}
 h2{
    font-size:1.9em;
    width:350px;
    opacity:.80;
}
h2 > span{
    color:#efb1ff;
    font-size:.7em;
}
.about-img{
    position:unset;
    margin-right:27%;
    height:240px;
    margin-top:3.5em;
    opacity:.6;
    
}
.about-img:hover{
    height:242px;
    opacity:1;
    cursor:pointer;
}
.about-desc > p{
    width:500px;
    font-size:1em;
    line-height:1.8em;
    opacity:.8;
     margin-top:1em;
 
}
.skills{
    display:flex;
    margin-top:1.1em;
}
.skills > ul{
    margin-right:3em;
    margin-left:1.1em;
}
.skills ul li{
    padding-bottom:.4em;
    font-size:.88em;
    opacity:.8;
    position:relative;
}
.skills ul li::before,.work-desc-container ul li::before{
   content:"";
   position:absolute;
   width:0px;
   height:0px;
   border:.28em solid;
   border-color:transparent transparent white;
   transform:rotate(90deg);
   left:-.6em;
   top:.3em;
   opacity:.7;
 }
.work{
    width:620px;
    height:300px;
    margin:160px auto;
    padding-top:4em;
}
.work-container{
     display:flex;
    justify-content:space-between;
    height:100%;
    margin-top:2em;
}
.work-container .work-desc{
    display:none;
    position:relative;
    
}
.work-desc-container .active{
    display:block;
    width:500px;
    font-size:1.2em;
    line-height:1.6em;
    opacity:.8;  
}
.work-container > ul{
    margin-top:.3em;
    position:relative;
}


.work-container ul li button{
    background:#222831;
    color:white;
    opacity:.6;
    padding:.07em .2em;
    margin-right:4em;
    margin-top:.5em;
    border:0;
    font-size:.6em;
    outline:none;
    width:70px;
    height:25px;
    cursor:pointer;
}
.work-btns .moe-btn-load{
    color:#efb1ff;
    opacity:1;
    font-weight:bold;
    border-left:.8px solid rgba(255,250,250,.8);
}
.work-container ul li button:hover{
    background:#393e46;
    color:#efb1ff;
    opacity:1;
    font-weight:bold;
}
.work-container .active-btn{
    background:#393e46;
    color:#efb1ff;
    opacity:1;
    font-weight:bold;
}

.work-desc-container ul li{
    position:relative;
    font-size:.88em;
}
.work-desc-container ul li::before{
    top:.7em;
   
}
.projects{
    margin:0 150px;
    padding-top:6em;
    position:relative;
}
.pro1{
   
    width:1150px;
}
.pro-image{
    margin-top:1em;
    width:600px;
    height:400px;
    opacity:.5;
    padding-top:0;
}
.pro-image:hover{
    opacity:1;
    cursor:pointer;
}
.project-container {
    position:relative;
    display:flex;
    margin-top:0em;
}
.projects :nth-child(3) img{
   margin-top:5em;
   margin-left:380px;
}
.card{
   
    width:480px;
    background:#323232;
    padding: .7em .9em ;
    opacity:.7;
    font-size:.88em;
    line-height:1.3em;
}

.tools > ul{
    display:flex;
    justify-content: flex-end;
    color:#888888;
   
   
}
/* ... */

